Fix some images being squished in vertical decks

--- a/src/components/Deck/index.css
+++ b/src/components/Deck/index.css
@@ -191,6 +191,7 @@
   max-height: 1.6em;
   margin-right: 1em;
   margin-left: auto;
+  object-fit: contain;
 }
 
 .Deck--horizontal .Deck__image {
